--- a/app/views/papuas/index.html.erb
+++ b/app/views/papuas/index.html.erb
@@ -43,7 +43,17 @@
     </div>
   </div>
 
-  <div id='map' style='width: 100%; height: 600px;'></div>
+  <!--div id='map' style='width: 100%; height: 600px;'></div-->
+  <div id='map' style='width: 100%; height: 600px;'>
+    <%= render 'maps' %>
+  </div>
+  
+  <div id="state-legend" class="legend">
+    <h4>Country</h4>
+    <div><span style="background-color: #fbb03b"></span>PNG</div>
+    <div><span style="background-color: #e55e5e"></span>IND</div>
+    <div><span style="background-color: #223b53"></span>Solomon Islands</div>
+  </div>
 
   <div class="py-5 flex items-center justify-between" id="charts">
     
@@ -233,7 +243,7 @@
     </div>
   </div-->
 
-<script>
+<!--script>
     mapboxgl.accessToken = 'pk.eyJ1Ijoic2lsZW5jZWp0IiwiYSI6ImNrc2EwN3ZwNjB6NTcydXFxZ2N2bmRwNHcifQ.uxkpkzBwxIFOgqzEN_7bqA';
     const map = new mapboxgl.Map({
         container: 'map', // container ID
@@ -391,5 +401,5 @@
       }
     }*/
     
-  </script>
+</script-->
 <% end %>
