--- a/app/views/papuas/_page_entries_info.html.erb
+++ b/app/views/papuas/_page_entries_info.html.erb
@@ -19,4 +19,4 @@
     </div>
 </div-->
 
-<%= page_entries_info @papuas, entry_name: 'result' %>
+<%= page_entries_info @papuas_page, entry_name: 'result' %>
