--- a/app/views/papuas/index.html.erb
+++ b/app/views/papuas/index.html.erb
@@ -47,7 +47,7 @@
   <div id='map' style='width: 100%; height: 600px;'>
     <%= render 'maps' %>
   </div>
-  
+
   <div id="state-legend" class="legend">
     <h4>Country</h4>
     <div><span style="background-color: #fbb03b"></span>PNG</div>
@@ -64,6 +64,11 @@
   <!--div class="py-3" id='map' style='width: 1000px; height: 600px;'></div-->
   <%#= text_field_tag :search_inc, params[:search_inc] %>
   <!--input type="text" id="search_c" name="search_c"-->
+
+  <div class="mt-3 bg-white py-3 flex items-center justify-between border-t border-gray-200">
+    <div id="page_entries_info"><%= render 'page_entries_info' %></div>
+    <!--div id="paginator"><%#= paginate @papuas, remote: true %></div-->
+  </div>
 
   
   <div class="align-middle inline-block min-w-full" id="papuas_table">
@@ -209,10 +214,10 @@
 </div>
  
 
-  <div class="mt-3 bg-white py-3 flex items-center justify-between border-t border-gray-200">
-    <div id="page_entries_info"><%= render 'page_entries_info' %></div>
-    <div id="paginator"><%= paginate @papuas, remote: true %></div>
-  </div>  
+  <!--div class="mt-3 bg-white py-3 flex items-center justify-between border-t border-gray-200">
+    <div id="page_entries_info"><%#= render 'page_entries_info' %></div>
+    <div id="paginator"><%#= paginate @papuas, remote: true %></div>
+  </div-->  
    
 
   <!--div class="bg-white py-3 flex items-center justify-end border-t border-gray-200">
@@ -230,7 +235,7 @@
               to
               <span class="font-medium"><%#= @papuas.offset_value + @papuas.length %></span>
               of
-              <span class="font-medium"> <%= @papuas.total_count %> </span>
+              <span class="font-medium"> <%#= @papuas.total_count %> </span>
               results
             <%# end %>  
           </p>
