--- a/app/views/papuas/index.js.erb
+++ b/app/views/papuas/index.js.erb
@@ -3,6 +3,6 @@ $("#papuas_table tbody").html("<%= escape_javascript(render("papuas")) %>");
 $("#page_entries_info").html("<%= escape_javascript(render("page_entries_info")) %>");
 
 //works fine but slow
-$("#paginator").html("<%= escape_javascript(paginate(@papuas, :remote => true).to_s) %>");
+$("#paginator").html("<%= escape_javascript(paginate(@papuas_page, :remote => true).to_s) %>");
 
 $("#charts").html("<%= escape_javascript(render("charts")) %>");
