--- a/app/views/papuas/index.html.erb
+++ b/app/views/papuas/index.html.erb
@@ -49,10 +49,14 @@
   </div>
 
   <div id="state-legend" class="legend">
-    <h4>Country</h4>
-    <div><span style="background-color: #fbb03b"></span>PNG</div>
-    <div><span style="background-color: #e55e5e"></span>IND</div>
-    <div><span style="background-color: #223b53"></span>Solomon Islands</div>
+    <h4>Results</h4>
+    <div><span style="background-color: #fbb03b" class="circle"></span>PNG</div>
+    <div><span style="background-color: #e55e5e" class="circle"></span>IND</div>
+    <div><span style="background-color: #223b53" class="circle"></span>Solomon Islands</div>
+    <h4 style="margin-top: 14px ">The Rest</h4>
+    <div><span><img class="img" src="/school-JP_PNG.svg"></img></span>PNG</div>
+    <div><span><img class="img" src="/school-JP_IND.svg"></img></span>IND</div>
+    <div><span><img class="img" src="/school-JP_Solo.svg"></img></span>Solomon Islands</div>
   </div>
 
   <div class="py-5 flex items-center justify-between" id="charts">
