add symbol opacity

--- a/app/views/papuas/_maps.html.erb
+++ b/app/views/papuas/_maps.html.erb
@@ -115,7 +115,7 @@
 			'type': 'symbol',
 			'layout': {
 				'icon-image': 'results-icon',
-				'icon-size': 0.6,
+				'icon-size': 0.75,
 				'icon-allow-overlap': true
 			},
 			'paint': {
@@ -158,7 +158,8 @@
 	            'IND',
 	            '#e55e5e',
 	            '#223b53' // any other store type
-				]
+				],
+				'icon-opacity': 0.5
 			}
 			});
 		});
