edit Regex query

--- a/app/views/papuas/index.html.erb
+++ b/app/views/papuas/index.html.erb
@@ -160,7 +160,7 @@
             </th-->
 
             <th scope="col" class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-              <!--input type="text" id="search_inv" name="search_inv" class="focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md w-40 h-8"-->
+              <input type="text" id="search_inv" name="search_inv" class="focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md w-64">
             </th>
 
             <th scope="col" class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
