--- a/app/views/papuas/index.xls.erb
+++ b/app/views/papuas/index.xls.erb
@@ -19,7 +19,7 @@
     <% @papuas.each do |papua| %>
       <Row>
         <Cell><Data ss:Type="String"><%= papua.no %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= papua.language %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= papua.language_name %></Data></Cell>
         <Cell><Data ss:Type="String"><%= papua.language_family %></Data></Cell>
         <Cell><Data ss:Type="String"><%= papua.iso %></Data></Cell>
         <Cell><Data ss:Type="String"><%= papua.country %></Data></Cell>
