--- a/app/views/papuas/index.html.erb
+++ b/app/views/papuas/index.html.erb
@@ -12,7 +12,7 @@
 
     
     
-    <%= render 'shared/searchbar' %>
+    <%#= render 'shared/searchbar' %>
     
     
     <%# if user_signed_in? && current_user.admin? %>
@@ -71,9 +71,7 @@
 
   <div class="mt-3 bg-white py-3 flex items-center justify-between border-t border-gray-200">
     <div id="page_entries_info"><%= render 'page_entries_info' %></div>
-    <%= link_to "Download: Excel", 
-        papuas_path({:format => "xls"}),
-        download: 'Papunesias.xls', class: "ml-3 inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500" %>
+    <%= render 'shared/searchbar' %>
     <!--div id="paginator"><%#= paginate @papuas, remote: true %></div-->
   </div>
 
