--- a/app/views/shared/_searchbar.html.erb
+++ b/app/views/shared/_searchbar.html.erb
@@ -1,8 +1,8 @@
 <%= form_tag(papuas_path, method: "get") do %>
     <div class="py-4 flex items-center">
-      <%= text_field_tag :search_inc, params[:search_inc], class: "focus:ring-indigo-500 focus:border-indigo-500 block w-96 shadow-sm sm:text-sm border-gray-300 rounded-md", placeholder: "Search inventories" %>
-      <%= text_field_tag :search_exc, params[:search_exc], class: "focus:ring-indigo-500 focus:border-indigo-500 block w-96 shadow-sm sm:text-sm border-gray-300 rounded-md ml-3", placeholder: "Exclude inventories" %>
-      <%= submit_tag "Search!", class: "ml-3 inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
+      <%#= text_field_tag :search_inc, params[:search_inc], class: "focus:ring-indigo-500 focus:border-indigo-500 block w-96 shadow-sm sm:text-sm border-gray-300 rounded-md", placeholder: "Search inventories" %>
+      <%#= text_field_tag :search_exc, params[:search_exc], class: "focus:ring-indigo-500 focus:border-indigo-500 block w-96 shadow-sm sm:text-sm border-gray-300 rounded-md ml-3", placeholder: "Exclude inventories" %>
+      <%= submit_tag "START!", class: "ml-3 items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 text-center w-48" %>
 
 
       <%= link_to "Download: Excel", 
