--- a/app/views/papuas/_page_entries_info.html.erb
+++ b/app/views/papuas/_page_entries_info.html.erb
@@ -15,7 +15,7 @@
               <span class="font-medium"> <%#= @papuas_page.total_count %> </span-->
               
             <%# end %> 
-            <span class="font-semibold text-lg"> <%= @papuas_page.total_count %> </span>
+            <span class="font-semibold text-lg"> <%= @papuas.length %> </span>
               results and rest 
             <span class="font-semibold text-lg"> <%= @papuas_other.length %> </span>
               languages in blue rows
