--- a/app/views/segments/show.html.erb
+++ b/app/views/segments/show.html.erb
@@ -27,3 +27,73 @@
 
 <%= link_to 'Edit', edit_segment_path(@segment) %> |
 <%= link_to 'Back', segments_path %>
+
+
+<div class="mt-3 bg-white py-3 flex items-center justify-between border-t border-gray-200">
+    <div id="page_entries_info"><%= render 'papuas/page_entries_info' %></div>
+    <!--div id="paginator"><%#= paginate @papuas, remote: true %></div-->
+  </div>
+
+<div class="align-middle inline-block min-w-full" id="papuas_table">
+  <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
+      
+    <table id="myTable" class="min-w-full divide-y divide-gray-200">
+    <thead class="bg-gray-50 divide-y divide-gray-200">
+        <tr class="h-12">
+            <th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              No
+            </th>
+
+            <th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              <p>Language</p>
+              <%#= text_field_tag :search_inc, params[:search_inc] %>
+              <!--input type="text" id="search_c" name="search_c" class="focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md"-->
+            </th>
+
+            <th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              Language Family
+            </th>
+
+            <th scope="col" class="px-2 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              ISO
+            </th>
+
+            <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              Country
+            </th>
+
+            <!--th scope="col" class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              Latitude
+            </th>
+
+            <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              longitude
+            </th-->
+
+            <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              Inventory
+            </th>
+
+            <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              <p>C</p>
+              <!--input type="text" id="search_c" name="search_c" class="focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md w-12"-->
+            </th>
+
+            <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              <p>V</p>
+              <!--input type="text" id="search_v" name="search_v" class="focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md w-12"-->
+            </th>
+
+            <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              <p>Total</p>
+              <!--input type="text" id="search_cv" name="search_cv" class="focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md w-12"-->
+            </th>
+        </tr>
+    </thead>
+    <tbody class="bg-white divide-y divide-gray-200">
+      <%= render 'papuas/papuas' %>
+    </tbody>
+    
+    </table>
+    </div>
+  </div>
