edit segment show page

--- a/app/views/segments/index.html.erb
+++ b/app/views/segments/index.html.erb
@@ -2,6 +2,8 @@
 
 <h1 class="py-2 text-3xl text-gary-900 font-bold">Segments</h1>
 
+<%#= @seg_list %>
+
 <div class="align-middle inline-block min-w-full" id="papuas_table">
   <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
       
