--- a/app/views/papuas/_papuas.html.erb
+++ b/app/views/papuas/_papuas.html.erb
@@ -57,7 +57,7 @@
     <tr>
       <td align="center" colspan="9" class="px-4 py-4 text-lg text-gray-700 font-medium">
         The rest 
-        <span class="font-semibold text-blue-700 text-2xl"> <%= @papuas_other.length %> </span>
+        <span class="font-semibold text-blue-700 text-2xl"> <%= @papuas_other.size %> </span>
         languages
       </td>
     </tr>
