--- a/app/views/papuas/index.html.erb
+++ b/app/views/papuas/index.html.erb
@@ -33,12 +33,12 @@
   <div class="flex justify-center space-x-4 text-lg font-medium text-gray-900">
     <div>
       <p>
-        Results: <%= @papuas_results.length %>
+        Results: <%= @papuas_results.size %>
       </p>
     </div>
     <div>
       <P>
-        Total: <%= @papuas_all.length %>
+        Total: <%= @papuas_all_size %>
       </p>
     </div>
   </div>
