--- a/app/views/papuas/show.html.erb
+++ b/app/views/papuas/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Iso:</strong>
-  <%= @papua.iso %>
+  <a href="https://iso639-3.sil.org/code/<%= @papua.iso.to_s %>" target="_blank" class="text-blue-600"><%= @papua.iso %></a>
 </p>
 
 <p>
@@ -34,6 +34,26 @@
   <strong>Inv:</strong>
   <%= @papua.inv %>
 </p>
+
+<p>
+  <strong>Consonants:</strong>
+  <% @seg_no.each do |k,v| %>
+    <a href="/segments/<%= v.to_s %>" target="_blank" class="text-blue-600"><%= "#{k} " %></a>
+  <% end %>
+</p>
+
+<p>
+  <strong>Vowels:</strong>
+  <%= @papua.vowels %>
+</p>
+
+<% if @papua.diphthongs.length > 0 %>
+  <p>
+    <strong>Diphthongs:</strong>
+    <%= @papua.diphthongs %>
+  </p>
+<% end %>
+
 
 <%= link_to 'Edit', edit_papua_path(@papua) %> |
 <%= link_to 'Back', papuas_path %>
